--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,7 @@
     "dev": "nodemon src/index.js",
     "start": "node src/index.js",
     "build": "echo 'No build step needed'",
-    "test": "jest",
+    "test": "jest"
   },
   "dependencies": {
     "express": "^4.18.2",
