--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,9 +24,9 @@ services:
       dockerfile: Dockerfile
     container_name: edatrat-frontend
     environment:
-      REACT_APP_API_URL: http://localhost:3001/api
+      VITE_API_URL: http://vgk-perv.ru:3001
     ports:
-      - "3000:3000"
+      - "27015:27015"
     volumes:
       - ./frontend:/app
       - /app/node_modules
