--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,7 @@
     "@mui/material": "^5.15.0",
     "@mui/icons-material": "^5.15.0",
     "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
+    "@emotion/styled": "^11.11.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.2.1",
